<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/green_gradient"
    android:weightSum="100"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/hero_image"
            android:textColor="@color/aqua"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/hero_image2"
            android:textColor="@color/aqua"
            android:textSize="24sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@color/cardview_light_background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/roundedrect"
                android:drawableStart="@drawable/usericon"
                android:fontFamily="@font/montserrat"
                android:hint="Username"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                >
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/roundedrect"
                android:drawableStart="@drawable/emailicon"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                >
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/roundedrect"
                android:drawableStart="@drawable/lockicon"
                android:fontFamily="@font/montserrat"
                android:id="@+id/password"
                android:hint="@string/password"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                >
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/passwordConfirm"
                android:background="@drawable/roundedrect"
                android:drawableStart="@drawable/usericon"
                android:fontFamily="@font/montserrat"
                android:hint="Confirm Password"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                >
            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signUpButton"
                android:text="Sign Up"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_bold"
                android:backgroundTint="@color/aqua"
                android:layout_marginTop="15dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>