<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient"
    tools:context=".HistoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="History"
                android:textSize="40sp"
                android:textColor="@color/aqua"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginBottom="8dp" />

            <!-- Current Parcel label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentParcel"
                android:textSize="20sp"
                android:textColor="@color/aqua"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginBottom="8dp" />

            <!--            Card background for delivery tracker-->

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/aqua">

                <!-- Delivery tracker container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/aqua"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/history"
                        android:tint="@color/aqua"
                        app:shapeAppearanceOverlay="@style/Circular"
                        android:background="@color/white"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Out for Delivery!"
                            android:textSize="20sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parcelid1"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_marginLeft="15dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/lastUpdated"
                            android:textSize="12sp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:text="@string/date1"
                            android:textSize="14sp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@android:color/white" />

                    </LinearLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pastParcels"
                android:textSize="20sp"
                android:textColor="@color/aqua"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="8dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/light_grey"
                >

                <!-- Delivery tracker container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/light_grey"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/history"
                        android:tint="@color/white"
                        app:shapeAppearanceOverlay="@style/Circular"
                        android:background="@color/aqua"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Delivered!"
                            android:textSize="20sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@color/aqua" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parcelid2"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/grey2" />

                    </LinearLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/light_grey"
                >

                <!-- Delivery tracker container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/light_grey"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/history"
                        android:tint="@color/white"
                        app:shapeAppearanceOverlay="@style/Circular"
                        android:background="@color/aqua"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Delivered!"
                            android:textSize="20sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@color/aqua" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parcelid3"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/grey2" />

                    </LinearLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/light_grey"
                >

                <!-- Delivery tracker container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/light_grey"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/history"
                        android:tint="@color/white"
                        app:shapeAppearanceOverlay="@style/Circular"
                        android:background="@color/aqua"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Delivered!"
                            android:textSize="20sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@color/aqua" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parcelid4"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/grey2" />

                    </LinearLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/light_grey"
                >

                <!-- Delivery tracker container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/light_grey"
                    android:padding="16dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:src="@drawable/history"
                        android:tint="@color/white"
                        app:shapeAppearanceOverlay="@style/Circular"
                        android:background="@color/aqua"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Delivered!"
                            android:textSize="20sp"
                            android:fontFamily="@font/montserrat_bold"
                            android:textColor="@color/aqua" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parcelid5"
                            android:textSize="18sp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/grey2" />

                    </LinearLayout>



                </LinearLayout>
            </androidx.cardview.widget.CardView>





        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>